@@ -4,6 +4,7 @@
 - fix nested submount expire deadlock.
 - fix negative caching for non-existent map keys.
 - use CLOEXEC flag.
+- fix select(2) fd limit.
 
 4/11/2008 autofs-5.0.4
 -----------------------
